--- a/pages/contact-us/self-help-tuition.html
+++ b/pages/contact-us/self-help-tuition.html
@@ -116,8 +116,8 @@
 				<div id="whatcost" class="answer accordion">
 					<p>Pathway tuition varies by country.
 					<ul>
-						<li>Click <a target="_blank" href="https://pathway.lds.org/main/costcalculator?language=true">here</a> for tuition information for Pathway's <a target="_blank" href="https://pathway.lds.org/main/standard">Standard</a> version.</li>
-						<li>Click <a target="_blank" href="https://pathway.lds.org/main/costcalculator">here</a> for tuition information for Pathway's <a target="_blank" href="https://pathway.lds.org/main/language">L</a> version.</li>
+						<li>Click <a target="_blank" href="https://pathway.lds.org/main/costcalculator">here</a> for tuition information for Pathway's <a target="_blank" href="https://pathway.lds.org/main/standard">Standard</a> version.</li>
+						<li>Click <a target="_blank" href="https://pathway.lds.org/main/costcalculator?language=true">here</a> for tuition information for Pathway's <a target="_blank" href="https://pathway.lds.org/main/language">L</a> version.</li>
 					</ul>
 					</p>
 				</div>
