--- a/pages/contact-us/self-help-after-pathway.html
+++ b/pages/contact-us/self-help-after-pathway.html
@@ -136,7 +136,7 @@
 			<div class="pf-section show">
 				<h4 id="what_happens_if_i_change_my_major_after_i_start_my_degree_program" class="accordion-heading">What happens if I change my major after I start my degree program?</h4>
 				<div id="changemajor" class="answer accordion">
-					<p>Majors are declared at the time a student starts the BYU-Idaho Online Degree Program. Students who wish to change their major should contact their BYU-Idaho academic advisor.</p>
+					<p>Majors are declared at the time a student starts the BYU-Idaho Online Degree Program. Students who wish to change their major should contact their BYU-Idaho <a target="_blank" href="http://www.byui.edu/advising/academic-advising">academic advisor</a>.</p>
 				</div>
 			</div><br/><br/>
 			<div id="moreapplytobyui" class="hero pf-page-header show">
@@ -145,10 +145,10 @@
 			<div class="pf-section show">
 				<h4 id="what_are_the_requirements_for_Pathway_students_who_want_to_enter_the_BYUIdaho_online_degree_program_after_Pathway" class="accordion-heading">What are the requirements for Pathway students who want to enter the BYU-Idaho Online Degree Program after Pathway?</h4>
 				<div id="requirements" class="answer accordion">
-					<p>Students who desire to start the BYU-Idaho Online Degree Program after Pathway must meet the following minimum requirements:
+					<p>Pathway students are eligible to apply to the BYU-Idaho Online Degree Program during their third and final semester of Pathway. Students who desire to start the BYU-Idaho Online Degree Program after Pathway must meet the following minimum requirements:
 					<ul>
 						<li>Complete Pathway with a minimum “B” average (3.0 cumulative GPA).</li>
-						<li>Obtain an ecclesiastical endorsement from their bishop.</li>
+						<li>Obtain an ecclesiastical endorsement from their bishop and stake president.</li>
 						<li>Commit to live the <a target="_blank" href="http://www.byui.edu/student-honor-office/ces-honor-code">CES Honor Code</a>.</li>
 					</ul></p>
 				</div>
@@ -180,7 +180,7 @@
 			<div class="pf-section show">
 				<h4 id="what_is_an_ecclesiastical_endorsement_why_do_i_need_one" class="accordion-heading">What is an ecclesiastical endorsement? Why do I need one?</h4>
 				<div id="ecclesiasticalendorsement" class="answer accordion">
-					<p>An ecclesiastical endorsement is a certification from a student’s bishop that he/she is living in accordance with the CES Honor Code. This endorsement is required as a condition of enrollment to any Church-operated university.</p>
+					<p>An ecclesiastical endorsement is a certification from a student’s bishop that he/she is living in accordance with the <a target="_blank" href="http://www.byui.edu/student-honor-office/ces-honor-code">CES Honor Code</a>. This endorsement is required as a condition of enrollment to any Church-operated university.</p>
 				</div>
 			</div>
 			<div class="pf-section show">
@@ -227,7 +227,7 @@
 			<div class="pf-section show">
 				<h4 id="how_do_i_get_a_Pathway_transcript_sent_to_BYUIdaho_or_other_colleges" class="accordion-heading">How do I get a Pathway transcript sent to or other colleges?</h4>
 				<div id="pathwaytranscript" class="answer accordion">
-					<p>Students can request official Pathway transcripts by signing in at pathway.lds.org. After signing in, students should select “Transcripts” from the dropdown menu next to their name.</p>
+					<p>Students can request official Pathway transcripts by signing in at pathway.lds.org. After signing in, students should select “Transcripts” from the drop-down menu next to their name.</p>
 				</div>
 			</div>
 			<div class="pf-section show">
