--- a/pages/contact-us/self-help-enrollment.html
+++ b/pages/contact-us/self-help-enrollment.html
@@ -134,7 +134,7 @@
 				</div>
 				<h4 id="do_i_need_an_ecclesiastical_endorsement_to_participate_in_Pathway" class="accordion-heading">Do I need an ecclesiastical endorsement to participate in Pathway?</h4>
 				<div id="ecclesiasticalendorsement" class="answer accordion">
-					<p>No, Pathway students do not need an ecclesiastical endorsement (worthiness interview with a bishop) to participate in the program. However, students who enroll at BYU-Idaho after Pathway, either on campus or as an online student, will need to obtain an endorsement at that time.</p>
+					<p>No, Pathway students do not need an <a target="_blank" href="http://www.byui.edu/student-honor-office/ces-honor-code/ecclesiastical-endorsement/ecclesiastical-endorsement-policies">ecclesiastical endorsement</a> (worthiness interview with a bishop) to participate in the program. However, students who enroll at BYU-Idaho after Pathway, either on campus or as an online student, will need to obtain an endorsement at that time.</p>
 				</div>
 				<h4 id="can_people_who_are_not_members_of_The_Church_of_Jesus_Christ_of_Latterday_Saints_join_Pathway" class="accordion-heading">Can people who are not members of The Church of Jesus Christ of Latter-day Saints join Pathway?</h4>
 				<div id="nonmember" class="answer accordion">
@@ -155,7 +155,7 @@
 				<h4 id="i_missed_the_application_deadline_can_i_still_be_admitted" class="accordion-heading">I missed the application deadline. Can I still be admitted?</h4>
 				<div id="misseddeadline" class="answer accordion">
 					<p>Applicants who miss the application deadline will need to wait until the next available start date. To find out the next time Pathway will begin in an area, applicants should contact their <a target="_blank" href="https://pathway.lds.org/finder/world">local Pathway missionaries</a>.<br/><br/>
-					Rare exceptions to the application deadline are made for full-time missionaries who return home after a deadline has passed, and for other similar extenuating circumstances. Applicants who want to be considered for a special exception must <a href="">submit a request</a>.</p>
+					Rare exceptions to the application deadline are made for full-time missionaries who return home after a deadline has passed and for other similar extenuating circumstances. Applicants who want to be considered for a special exception must <a target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_5chrTirwUGDNSnP">submit a request</a>.</p>
 				</div>
 			</div><br/><br/>
 			<div id="moreregistration" class="hero pf-page-header show">
@@ -164,12 +164,12 @@
 			<div class="pf-section show">
 				<h4 id="how_do_i_register_for_classes" class="accordion-heading">How do I register for classes?</h4>
 				<div id="howtoregister" class="answer accordion">
-					<p>Students entering their first semester of Pathway are automatically registered for their courses when they accept thei offer of admission.<br/><br/>
-					Students entering their second and third semesters register for their courses by signing in at <a target="_blank" href="https://pathway.lds.org">pathway.lds.org</a>. During the course registation period each semester, students will see an item in their "To Do" list prompting them to enroll in next semester's courses. Students can click the link and follow the directionsprovided.</p>
+					<p>Students entering their first semester of Pathway are automatically registered for their courses when they accept their offer of admission.<br/><br/>
+					Students entering their second and third semesters register for their courses by signing in at <a target="_blank" href="https://pathway.lds.org">pathway.lds.org</a>. During the course registration period each semester, students will see an item in their "To Do" list prompting them to enroll in next semester's courses. Students can click the link and follow the directions provided.</p>
 				</div>
 				<h4 id="which_courses_do_i_take" class="accordion-heading">Which course(s) do I take?</h4>
 				<div id="courses" class="answer accordion">
-					<p>Students can log in at <a target="_blank" href="https://pathway.lds.org">pathway.lds.org</a> and view their current courses and see which courses they will take in the future.</p>
+					<p>Students can sign in at <a target="_blank" href="https://pathway.lds.org">pathway.lds.org</a> and view their current courses and see which courses they will take in the future.</p>
 				</div>
 				<h4 id="what_is_the_deadline_to_register_for_courses" class="accordion-heading">What is the deadline to register for courses?</h4>
 				<div id="deadline" class="answer accordion">
@@ -178,7 +178,7 @@
 				<h4 id="what_happens_if_i_miss_the_deadline_to_register_for_courses" class="accordion-heading">What happens if I miss the deadline to register for courses?</h4>
 				<div id="misseddeadlineregister" class="answer accordion">
 					<p>Students who miss the course registration deadline will not be able to participate in Pathway during the upcoming semester. They may, however, rejoin Pathway in a future semester. Students in this situation should contact <a target="_blank" href="https://pathway.lds.org/main/advisingandsupport">Pathway Support</a> to discuss options.<br/>
-					Rare exceptions to the course registration deadline are made for missionaries who return home after a deadline has passed, and for other similar extenuating circumstances. Applicants who want to be considered for a special exception must <a href="">submit a request</a>.</p>
+					Rare exceptions to the course registration deadline are made for missionaries who return home after a deadline has passed and for other similar extenuating circumstances. Applicants who want to be considered for a special exception must <a target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_5chrTirwUGDNSnP">submit a request</a>.</p>
 				</div>
 			</div><br/><br/>
 			<div id="morepelp" class="hero pf-page-header show">
@@ -188,7 +188,7 @@
 				<h4 id="what_is_the_pelp" class="accordion-heading">What is the PELP?</h4>
 				<div class="answer accordion">
 					<p>The Pathway English Language Proficiency assessment (PELP) assesses an individual's ability to succeed in Pathway's courses, which are facilitated entirely in English. Applicants who need to take the PELP are identified during the process of applying to Pathway, and the PELP is administered as part of the application.<br/><br/>
-					A student's PELP score determines his/her ability for admission to Pathway. Individual who are admitted will be assigned to a version:
+					A student's PELP score determines his/her ability for admission to Pathway. Individuals who are admitted will be assigned to a version:
 					<ul>
 						<li><a target="_blank" href="https://pathway.lds.org/main/standard">Standard</a> (for individuals who are fluent in English)</li>
 						<li><a target="_blank" href="https://pathway.lds.org/main/language">L</a> (for individuals with intermediate-low English proficiency)</li>
@@ -196,7 +196,7 @@
 				</div>
 				<h4 id="why_do_i_have_to_take_the_pelp" class="accordion-heading">Why do I have to take the PELP?</h4>
 				<div id="whytakepelp" class="answer accordion">
-					<p>Because Pathway's courses are facilitated entirely in English, some applicants are required to take the PELP to determine their ability to succeed.</p>
+					<p>Because Pathway's courses are conducted entirely in English, some applicants are required to take the PELP to determine their ability to succeed, which is determined by their level of English proficiency.</p>
 				</div>
 				<h4 id="can_i_take_the_pelp_more_than_once" class="accordion-heading">Can I take the PELP more than once?</h4>
 				<div id="repeatpelp" class="answer accordion">
@@ -204,7 +204,7 @@
 				</div>
 				<h4 id="i_didn't_score_high_enough_to_join_Pathway_can_i_retake_the_pelp_at_a_later_date" class="accordion-heading">I didn't score high enough to join Pathway. Can I retake the PELP at a later date?</h4>
 				<div id="retakepelp" class="answer accordion">
-					<p>Yes, applicants may retake the PELP after 60 days from their most recent attempt. Applicants who qualify to retake the PELP may do so <a href="#">here</a>.</p>
+					<p>Yes, applicants may retake the PELP after 60 days from their most recent attempt. Applicants who qualify to retake the PELP as part of their <a target="_blank" href="https://pathway.lds.org/Main/Join">application</a> to Pathway.</p>
 				</div>
 				<h4 id="are_there_resources_available_to_help_me_improve_my_english" class="accordion-heading">Are there resources available to help me improve my English?</h4>
 				<div id="improveenglish" class="answer accordion">
