--- a/pages/contact-us/self-help-speaking-partners.html
+++ b/pages/contact-us/self-help-speaking-partners.html
@@ -112,9 +112,9 @@
 				<h2 class="heading" id="Standard">Finding a Partner</h2>
 			</div>
 			<div class="pf-section show">
-				<h4 id="how_do_I_find_a_speaking_partner" class="accordion-heading">I am a student in Pathway’s L Version. How do I find a speaking partner?</h4>
+				<h4 id="how_do_I_find_a_speaking_partner" class="accordion-heading">I am a student in Pathway’s L version. How do I find a speaking partner?</h4>
 				<div id="findaspeakingpartner" class="answer accordion">
-					<p>Students currently enrolled in Pathway’s L version can find information regarding how to find a speaking partner mentor by logging into their academic course and clicking the “Speaking Partner Registration” link in the “Introduction Lesson” folder.</p>
+					<p>Students currently enrolled in Pathway’s L version can find information regarding how to find a speaking partner mentor by signing into their academic course and clicking the “Speaking Partner Registration” link in the “Introduction Lesson” folder.</p>
 				</div>
 			</div><br/><br/>
 			<div id="morealternateassignments" class="hero pf-page-header show">
@@ -153,7 +153,7 @@
 			<div class="pf-section show">
 				<h4 id="whats_the_difference_between_Pathway_and_speaking_partners" class="accordion-heading">What's the difference between Pathway and Speaking Partners?</h4>
 				<div id="pathwayvsspeakingpartner" class="answer accordion">
-					<p>Speaking Partners is a sub-program of Pathway. Speaking Partners specifically helps non-native English speaking Pathway students improve their English abilities.</p>
+					<p>Speaking Partners is a sub-program of Pathway. Speaking Partners specifically helps non-native English-speaking Pathway students improve their English abilities.</p>
 				</div>
 			</div>
 			<div class="pf-section show">
