--- a/pages/contact-us/help.html
+++ b/pages/contact-us/help.html
@@ -113,8 +113,8 @@
 					<ul class="contact-navigator nav" role="tablist">
 						<li role="presentation" class="contact-tab"><a href="#Enrollment" role="tab" data-toggle="tab" class="tab-inner orange">Enrollment</a></li>
 						<li role="presentation" class="contact-tab"><a href="#Tuition" role="tab" data-toggle="tab" class="tab-inner turquoise">Tuition</a></li>
-						<li role="presentation" class="contact-tab"><a href="#AfterPathway" role="tab" data-toggle="tab" class="tab-inner red">After Pathway</a></li>
-						<li role="presentation" class="contact-tab"><a href="#CoursesAndGatherings" role="tab" data-toggle="tab" class="tab-inner teal">Courses &amp; Gatherings</a></li>
+						<li role="presentation" class="contact-tab"><a href="#CoursesAndGatherings" role="tab" data-toggle="tab" class="tab-inner red">Courses &amp; Gatherings</a></li>
+						<li role="presentation" class="contact-tab"><a href="#AfterPathway" role="tab" data-toggle="tab" class="tab-inner teal">After Pathway</a></li>
 						<li role="presentation" class="contact-tab"><a href="#SpeakingPartners" role="tab" data-toggle="tab" class="tab-inner green">Speaking Partners</a></li>
 					</ul>
 					<!-- Tab panes -->
@@ -188,7 +188,7 @@
 								<a href="/working-build/pages/contact-us/self-help-tuition.html#moretaxes" class="bold">more...</a>
 							</div>
 						</div>
-						<div role="tabpanel" class="red tab-pane" id="AfterPathway">
+						<div role="tabpanel" class="teal tab-pane" id="AfterPathway">
 							<div id="after-pathway-icon" class="img-tab col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
 							<div class="sub-tab col-lg-6 col-md-6 col-sm-6 col-xs-6">
 								<a href="#" class="link active" id="byui-degree-options"> <span class="arrow"></span>BYU-Idaho Degree Options</a><br/>
@@ -226,7 +226,7 @@
 								<a href="/working-build/pages/contact-us/self-help-after-pathway.html#moretranscriptcertificates" class="bold">more...</a>
 							</div>
 						</div>
-						<div role="tabpanel" class="teal tab-pane" id="CoursesAndGatherings">
+						<div role="tabpanel" class="red tab-pane" id="CoursesAndGatherings">
 							<div id="courses-and-gatherings-icon" class="img-tab col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
 							<div class="sub-tab col-lg-6 col-md-6 col-sm-6 col-xs-6">
 								<a href="#" class="link active" id="pathway-courses"> <span class="arrow"></span>Pathway Courses</a><br/>
