--- a/pages/contact-us/help.html
+++ b/pages/contact-us/help.html
@@ -220,7 +220,7 @@
 							</div>
 							<div class="show last-tab col-lg-4 col-md-4 col-sm-4 col-xs-4 hidden" id="transcripts-and-certificates-last-tab">
 								<h4 class="bold">Transcripts &amp; Pathway Certificates</h4>
-								<a href="/working-build/pages/contact-us/self-help-after-pathway.html#how_do_i_get_a_Pathway_transcript_to_send_to_BYUIdaho_or_other_colleges">How do I get a Pathway transcript to send to BYU-Idaho or other colleges?</a>
+								<a href="/working-build/pages/contact-us/self-help-after-pathway.html#how_do_i_get_a_Pathway_transcript_sent_to_BYUIdaho_or_other_colleges">How do I get a Pathway transcript sent to BYU-Idaho or other colleges?</a>
 								<a href="/working-build/pages/contact-us/self-help-after-pathway.html#how_do_my_institute_credits_transfer_to_BYUIdaho">How do my institute credits transfer to BYU-Idaho?</a>
 								<a href="/working-build/pages/contact-us/self-help-after-pathway.html#how_do_i_get_a_Pathway_certificate_after_i_finish_the_program">How do I get a Pathway certificate after I finish the program?</a>
 								<a href="/working-build/pages/contact-us/self-help-after-pathway.html#moretranscriptcertificates" class="bold">more...</a>
