--- a/pages/contact-us/self-help-tuition.html
+++ b/pages/contact-us/self-help-tuition.html
@@ -116,8 +116,8 @@
 				<div id="whatcost" class="answer accordion">
 					<p>Pathway tuition varies by country.
 					<ul>
-						<li>Click <a target="_blank" href="https://pathway.lds.org/main/costcalculator?language=true">here</a> for tuition information for Pathway's <a target="_blank" href="https://pathway.lds.org/main/standard">Standard</a> version.</li>
-						<li>Click <a target="_blank" href="https://pathway.lds.org/main/costcalculator">here</a> for tuition information for Pathway's <a target="_blank" href="https://pathway.lds.org/main/language">L</a> version.</li>
+						<li>Click <a target="_blank" href="https://pathway.lds.org/main/costcalculator">here</a> for tuition information for Pathway's <a target="_blank" href="https://pathway.lds.org/main/standard">Standard</a> version.</li>
+						<li>Click <a target="_blank" href="https://pathway.lds.org/main/costcalculator?language=true">here</a> for tuition information for Pathway's <a target="_blank" href="https://pathway.lds.org/main/language">L</a> version.</li>
 					</ul>
 					</p>
 				</div>
@@ -129,7 +129,7 @@
 					<ol>
 						<li>Go to <a target="_blank" href="https://pathway.lds.org">pathway.lds.org</a> and sign in (top right corner).</li>
 						<li>Click the down arrow next to the student's name, and select the "Payments" link.</li>
-						<li>Indicate the amount to pay, and click "Pay". Users will be taken to e new web page to finalize payment.</li>
+						<li>Indicate the amount to pay, and click "Pay." Users will be taken to a new web page to finalize payment.</li>
 					</ol>
 					For a tutorial on how to pay tuition, click <a target="_blank" href="http://www.byui.edu/pathway/trainings/paying-tuition">here</a>.</p>
 				</div>
@@ -153,7 +153,7 @@
 				</div>
 			</div>
 			<div class="pf-section show">
-				<h4 id="does_Pathway_offers_payment_plans" class="accordion-heading">Does Pathway offers payment plans?</h4>
+				<h4 id="does_Pathway_offers_payment_plans" class="accordion-heading">Does Pathway offer payment plans?</h4>
 				<div id="paymentplan" class="answer accordion">
 					<p>No, Pathway does not offer payment plans. However, students may choose to pay in installments, as long as their current balance is paid by the tuition payment deadline.</p>
 				</div>
@@ -170,11 +170,11 @@
 			<div class="pf-section show">
 				<h4 id="is_financial_aid_available_to_Pathway_students" class="accordion-heading">Is financial aid available to Pathway students?</h4>
 				<div id="financialaid" class="answer accordion">
-					<h6>United States</h6>
-					<p>Pathway students in the United States do not qualify for U.S. federal financial aid because Pathway is not a degree-granting program. Pathway students also do not qualify for BYU-Idaho scholarships. Students are encouraged to search for private scholarships if they need financial assistance.<br/><br/>
-					U.S. students who have a high school diploma or equivalent are eligible to apply for U.S. federal financial aid if they enter a degree-seeking program after Pathway.</p>
-					<h6>International</h6>
-					<p>Pathway students do not qualify for BYU-Idaho scholarships. International Pathway students may consider searching for private scholarships or learning more about the <a target="_blank" href="https://www.lds.org/topics/pef-self-reliance?lang=eng">Perpetual Education Funds (PEF)</a> as a possible option to gain financial assistance.</p>
+					<strong>United States</strong>
+					<p>Pathway students in the United States do not qualify for U.S. federal financial aid because Pathway is not a degree-granting program. Pathway students also do not qualify for BYU-Idaho scholarships. Students are encouraged to search for private scholarships if they need financial assistance.</p>
+					<p>U.S. students who have a high school diploma or equivalent are eligible to apply for U.S. federal financial aid if they enter a degree-seeking program after Pathway.</p>
+					<strong>International</strong>
+					<p>Pathway students do not qualify for BYU-Idaho scholarships. International Pathway students may consider searching for private scholarships or learning more about the <a target="_blank" href="https://www.lds.org/topics/pef-self-reliance?lang=eng">Perpetual Education Fund (PEF)</a> as a possible option to gain financial assistance.</p>
 				</div>
 			</div><br/><br/>
 			<div id="morerefunds" class="hero pf-page-header show">
@@ -192,7 +192,7 @@
 			<div class="pf-section show">
 				<h4 id="will_my_participation_in_Pathway_affect_the_taxes_I_pay" class="accordion-heading">Will my participation in Pathway affect the taxes I pay?</h4>
 				<div id="taxes" class="answer accordion">
-					<p>Possibly. Each country has a separate set of laws. As a result of a student's Pathway participation, taxes or other payments may be owed to his/her local government. It is each student responsibility to understand those laws and comply.</p>
+					<p>Possibly. Each country has a separate set of laws. As a result of a student's Pathway participation, taxes or other payments may be owed to his/her local government. It is each student's responsibility to understand those laws and comply.</p>
 				</div>
 			</div><br/><br/>
 
