--- a/pages/contact-us/self-help-after-pathway.html
+++ b/pages/contact-us/self-help-after-pathway.html
@@ -108,7 +108,7 @@
 
 			<div id="morebyuidegree" class="hero pf-page-header show">
 				<img alt="icon" src="/working-build/img/contact-us/Have-a-Question/After-Pathway-Icon-Mini.png" />
-				<h1 class="heading red">After Pathway</h1>
+				<h1 class="heading teal">After Pathway</h1>
 				<h2 class="heading" id="Standard">BYU-Idaho Degree Options</h2>
 			</div>
 			<div class="pf-section show">
