--- a/pages/contact-us/self-help-courses-gatherings.html
+++ b/pages/contact-us/self-help-courses-gatherings.html
@@ -108,7 +108,7 @@
 
 			<div id="morepathwaycourses" class="hero pf-page-header show">
 				<img alt="icon" src="/working-build/img/contact-us/Have-a-Question/Courses-%26-Gatherings-Icon-Mini.png" />
-				<h1 class="heading teal">Courses &amp; Gatherings</h1>
+				<h1 class="heading red">Courses &amp; Gatherings</h1>
 				<h2 class="heading" id="Standard">Pathway Courses</h2>
 			</div>
 			<div class="pf-section show">
